incrementando o layout principal com imagem

--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class='titulo'>
+                    The Witcher
+                </h3>
+                <p class='descricao'>
+                    Geralt de Rivia, um caçador de monstros mutante, viaja ao encontro do seu destino num mundo caótico onde os humanos são mais perversos que os próprios monstros.
+                </p>
+            </div>
+            <div class="botoes">
+                <button role='button' class='botao'>
+                    ASSISTIR AGORA
+                </button>
+                <button role='button' class='botao'>
+                    MAIS INFORMAÇÕES
+                </button>
+            </div>
+        </div>
+    </main>
     
     <script src="js/scripts.js"></script>
 </body>
