layout dos botoes e implementacao de icones

--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
                 </p>
             </div>
             <div class="botoes">
-                <button role='button' class='botao'>
-                    ASSISTIR AGORA
-                </button>
-                <button role='button' class='botao'>
-                    MAIS INFORMAÇÕES
-                </button>
-            </div>
+            <button role='button' class='botao'>
+                <i class="fas fa-play"></i>
+                ASSISTIR AGORA
+            </button>
+            <button role='button' class='botao'>
+                <i class="fas fa-info-circle"></i>
+                MAIS INFORMAÇÕES
+            </button>
+            </div> 
         </div>
     </main>
-    
     <script src="js/scripts.js"></script>
+    <script src="https://kit.fontawesome.com/3ce06b875b.js" crossorigin="anonymous"></script>
 </body>
 </html>
